--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ nav ul li a:hover {
   box-sizing: border-box;
 }
 header {
-    background-color: #666;
+   
     padding: 30px;
     text-align: center;
     font-size: 35px;
@@ -113,4 +113,9 @@ header {
     
 }
 
+body{
+  background-image: url("LOGO.png");
+   width: 100%; 
+   height: 100vh;
+  }
 
