--- a/style.css
+++ b/style.css
@@ -118,4 +118,11 @@ body{
    width: 100%; 
    height: 100vh;
   }
-
+ .logo {
+    color: rgb(255, 255, 255);
+     font-size: 35px;
+     letter-spacing: 1px;
+     cursor: pointer;
+  
+    }span { color: #5b5e5b;}
+  
