--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+.F1{
+background-image: url("LOGO.png");
+ width: 100%; 
+ height: 100vh;
 
+nav {
 
+    display: flex;
 
+    width: 84%;
+
+    margin: auto;
+
+    padding: 20px 0;
+
+    align-items: center;
+
+    justify-content: space-between;
+
+}
     display: flex;
 
     width: 84%;
